styling to home page to ensure readabilty on using a tags in navbar

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -12,6 +12,7 @@
     justify-content: center; // Centering the list horizontally
     z-index: 1000; // Ensure it stays on top
     padding: 0 1rem; // Padding to the left and right
+    opacity: 0.95;
 }
 
 .nav-bar__list {
