--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -40,7 +40,7 @@
     display: flex;
     margin-bottom: 7rem;
     justify-content: center;
-    align-items: center;
+    //align-items: center;
 
     &--where {
       flex-direction: column;
@@ -48,43 +48,52 @@
 
     &--what {
       justify-content: space-around;
-      //align-items: flex-start;
     }
 
     &--who {
       flex-direction: row-reverse;
       justify-content: space-around;
+      align-items: center;
+      margin-top: 15rem;
 
     }
 
     
       &__header {
-
+          &--about-me{
+            text-align: center;
+            margin-top: 10rem;
+            font-size: 2.5rem;
+            //margin-bottom: 1rem;
+          }
        
           &--where{
           text-align: center;
           font-size: 2.5rem;
+          margin-top: 5rem;
           margin-bottom: 1rem;
         }
-        &--what {
-          text-align: center;
-          font-size: 2.3rem;
-         // margin-bottom: 7rem;
-         // display: block;
-          //margin-top: 0.4rem;
-          //margin-right: 7rem;
-        }
+          &--what {
+            text-align: center;
+            font-size: 2.3rem;
+          // margin-bottom: 7rem;
+          // display: block;
+            margin-top: 8rem;
+            //margin-right: 7rem;
+          }
 
-        &--who{
-          font-size: 2.3rem;
-          margin-left: 3rem;
-        }
+          &--who {
+            font-size: 2.3rem;
+            margin-left: 3rem;
+          }        
+
+
 
     }
-
-   
-
-   
   }
+
+  &__what-style-container {
+    margin-bottom: 8rem;
+  } 
 }                                           
 
